--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "expo-location": "~15.1.1"
+    "expo-location": "~15.1.1",
+    "expo-updates": "~0.16.4",
+    "expo-task-manager": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
