--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "~11.1.1",
+    "expo-updates": "~0.16.4",
     "lottie-react-native": "5.1.4",
+    "moti": "^0.25.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "expo-location": "~15.1.1",
-    "expo-updates": "~0.16.4",
-    "expo-task-manager": "~11.1.1"
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
