--- a/app.json
+++ b/app.json
@@ -38,11 +38,20 @@
         "backgroundColor": "#000000"
       },
       "permissions": [
-        "ACCESS_BACKGROUND_LOCATION"
-      ]
+        "ACCESS_BACKGROUND_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.FOREGROUND_SERVICE"
+      ],
+      "package": "com.antriksh01.WeatherApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b056a5c7-061c-4807-bece-882d75c443af"
+      }
     }
   }
 }
