--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-native-reanimated": "~2.14.4"
+    "react-native-reanimated": "~2.14.4",
+    "@expo/config-plugins": "~6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
